[package]
name = "libtailscale-sys"
version.workspace = true
edition = "2021"
description = "Rust FFI to libtailscale C API"
keywords = ["tailscale"]
license = "MIT"
links = "tailscale"
repository = "https://github.com/messense/libtailscale-rs"

[features]
default = ["static"]
static = []

[dependencies]

[build-dependencies]
cc = "1.0.79"
